# formatting

./: Cargo.toml  README.md
src/: formattable.rs  lib.rs  macros.rs  standard_format.rs  template.rs
