[package]
name = "formatting"
version = "0.1.0"
edition = "2024"
description = "Dynamic formatter for Rust"
license = "MIT OR Apache-2.0"

[features]
default = ["chrono"]

[dependencies]
anyhow = { version = "1.0.100", features = ["backtrace"], optional = true }
chrono = { version = "0.4.42", features = ["unstable-locales"], optional = true }
log = "0.4.29"
regex = "1.12.2"
thiserror = "2.0.17"

[dev-dependencies]
anyhow = { version = "1.0.100", features = ["backtrace"] }
